--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,20 @@
-.App {
+.app {
   text-align: center;
+  background : linear-gradient(90deg,rgb(92, 185, 248),rgb(29, 237, 123));
+  height: 100vh;
+  
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.heading {
+  padding-top: 25px;
+  font-size: 30px;
+  margin-bottom: 25px;
+  font-family: 'Times New Roman', Times, serif;
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+h2{
+  font-size: 24px;
+  margin-bottom: 20px;
+  font-family: 'Times New Roman', Times, serif;
 }
